--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <p class="category">CEO / Yeetum</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> Ian has been a tremendous young talent exposed to the Yeetum operation. He quickly learned the dynamism of the business and his attitude + work ethic is above reproach. Ian successfully viewed how to cutover Google DNS to Cloudflare nameservers. He is a strong young cyber patriot that will go far in his career.</p>
+                <p> Ian has been a tremendous young talent exposed to the Yeetum operation. He quickly learned the dynamism of the business and his attitude + work ethic is above reproach. Ian successfully viewed how to cutover Google DNS to Cloudflare nameservers, digital ocean static assets, CDN caching for enhanced DDoS protections. He is a strong young cyber patriot that will go far in his career.</p>
               </div>
             </div>
           </div>
